--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.0",
+    "bootstrap": "^5.1.3",
     "eslint-config-prettier": "^8.5.0",
     "formik": "^2.2.9",
     "react": "^17.0.2",
+    "react-bootstrap-icons": "^1.8.1",
     "react-data-table-component": "^7.4.7",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "reactstrap": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
